services/ui-src/src/index.scss
/* ... */
.no-results {
  @extend .ds-u-margin-top--5;
  @extend .ds-u-text-align--center;
  position: relative;
  width: 500px;
  margin: 0 auto;

  .no-results-background {
    width: 100px;
    height: 100px;
    color: $color-primary-alt-lightest;
  }

  .no-results-message {
    position: absolute;
    top: 1em;
    left: 0;
    right: 0;

    .no-results-header {
      @extend .ds-h4;
    }
  }
}

.dash-and-filters {
  flex: 1;
  @extend .ds-u-display--flex;

  .dashboard-and-alert-bar {
    flex: 1;
    overflow-x: auto;
  }

  .filter-pane {
    @extend .ds-u-display--flex;
    @extend .ds-u-flex-direction--column;
    width: 320px;
    background-color: $color-primary-darkest;
    color: $color-white;
    padding-bottom: 300px;

    > header {
      @extend .ds-u-margin-y--4;
      @extend .ds-u-margin-left--3;
      @extend .ds-u-margin-right--2;
      display: flex;
      align-items: baseline;

      h4 {
        flex: 1;
        margin-bottom: 0;
      }

      .close-filter-pane {
        text-decoration: none;
        font-weight: 700;

        svg {
          margin-left: 1ch;
        }
      }
    }

    .filter-accordion {
      flex: 1;
      overflow-y: auto;

      .ds-c-accordion__content {
        max-height: unset;
        overflow: visible;
        overflow-y: visible;
      }

      .rs-picker-daterange:not(:first-child) {
        @extend .ds-u-margin-top--2;
      }
    }

    > footer {
      @extend .ds-u-margin-y--2;
      @extend .ds-u-margin-left--1;
      @extend .ds-u-margin-right--3;

      button:first-child {
        @extend .ds-u-padding-left--2;
      }
    }
  }
}

.reset-button-filter {
  text-decoration: none;
  background-color: $color-primary-darkest;
  color: $color-white;
  margin-left: 25px;
  margin-right: 23px;
}

.inversed-accordion-button,
.inversed-accordion-button:hover,
.inversed-accordion-button[aria-expanded="false"],
.inversed-accordion-content {
  background: transparent;
  color: $color-white;
  @extend .ds-u-margin-top--1;
  @extend .ds-u-margin-bottom--1;
}

.inversed-accordion-button {
  @extend .ds-u-display--flex;
  @extend .ds-u-justify-content--between;
  @extend .ds-u-align-items--center;
  @extend .ds-u-padding-x--3;
  @extend .ds-u-margin-top--1;

  &::after {
    font-family: "Font Awesome 5 Free";
    font-size: 20px;
    content: "\f107";
    display: block;
    transition: transform 300ms;
  }

  // &.is-open,
  &.inversed-accordion-button[aria-expanded="true"] {
    &::after {
      transform: rotateZ(180deg);
    }
  }
}

.tab-bar {
  margin-left: 1rem;
  @extend .ds-u-margin-bottom--4;
  @extend .ds-u-display--flex;
  @extend .ds-u-align-items--start;
  @include max-width-ultra-wide;
  width: 100vw;
}
.tab-button {
  border-radius: 0;
  width: 120px;
  background-color: $color-white;
  color: black;
  border-top: none;
  border-left: none;
  border-right: none;
  border-bottom: 3px solid $color-gray-lighter;
}

.tab-button-wide {
  width: 150px;
}

.tab-button-tall {
  height: 60px;
}

.tab-button:disabled {
  background-color: $color-primary-alt-lightest;
  color: $color-primary;
  border-bottom: 3px solid $color-primary;
}

.custom-multi-select {
  color: $color-black;
}

.parent-row-expanded .row-expander-cell button svg {
  transform: rotateZ(180deg);
}

.child-row-expanded {
  background-color: $color-primary-alt-lightest;

  td:nth-child(1),
  td:nth-child(2) {
    background-color: $color-primary-alt-lightest;
  }

  button {
    @extend .ds-u-fill--transparent;
  }
}

.row-expander-cell {
  @extend .ds-u-color--gray;

  button {
    @extend .ds-u-fill--transparent;

    &:disabled {
      color: $color-gray-lightest;
    }
  }
}

.detail-card-section {
  display: flex;
  justify-content: space-between;

  @media only screen and (max-width: $width-sm) {
    justify-content: start;
    flex-direction: column;
    gap: 1rem;
  }
}

.detail-card-container {
  display: flex;
  flex-direction: column;
  width: 45%;

  @media only screen and (max-width: $width-sm) {
    width: 100%;
  }
}

.detail-card-top {
  @include gradient-top-border;
}

.detail-card {
  @extend .ds-u-display--flex;
  @extend .ds-u-padding--4;
  height: -moz-available; /* Mozilla Firefox will use this. */
  height: -webkit-fill-available; /* WebKit-based browsers will use this. */
  justify-content: space-between;
  background: $color-white;
  border: 1px solid $color-gray-lighter;
  border-radius: 0 0 3px 3px;
  border-top: none;

  .detail-card-status {
    @extend .ds-h2;
    color: $color-black;
  }

  section {
    .ds-c-review:first-of-type {
      @extend .ds-u-padding-top--0;
    }
  }
}

.package-actions {
  @extend .ds-u-flex-direction--column;
}
.action-list {
  list-style-type: none;
  @extend .ds-u-padding--0;
  @extend .ds-u-margin--0;

  p {
    color: $color-gray;
  }

  a {
    @extend .ds-c-button;
    @extend .ds-c-button--transparent;
    @extend .ds-u-text-decoration--none;
    @extend .ds-u-padding--0;
  }
}
.detail-section {
  @extend .ds-u-margin-top--7;
}

.submission-message {
  @extend .ds-u-margin-top--5;
  @extend .ds-u-margin-bottom--3;
  @extend .ds-text-body--md;
  @extend .ds-u-measure--wide;
  @extend .ds-u-font-style--italic;
  color: $color-gray;
}

.detail-title {
  @extend .ds-u-margin-bottom--3;
}

.choice-title {
  @extend .ds-h4;
}

.ds-u-color--warn {
  @extend .ds-u-color--primary;
}

.form-describe {
  th {
    background-color: $color-gray-lightest;
    text-align: center;
    border: solid 1px;
    margin: 2px;
    padding: 2px;
  }
  td {
    border: solid 1px;
    margin: 2px;
    padding: 2px;
  }
}

.video {
  button {
    @extend .ds-c-button;
    @extend .ds-c-button--transparent;
    @extend .ds-u-text-decoration--none;
    @extend .ds-u-padding--0;
    @extend .ds-u-justify-content--center;
    width: 100%;
  }
}

